# grape-kun-api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: manage.py
src/grape_kun_api/: asgi.py  settings.py  urls.py  wsgi.py
src/mangas/: admin.py  models.py  serializers.py  urls.py  views.py
src/mangas/management/commands/: crear_catalogo.py
src/mangas/migrations/: 0001_initial.py  0002_remove_proveedor_url_catalogo.py
src/usuarios/: admin.py  models.py  serializers.py  urls.py  views.py
src/usuarios/management/commands/: crearadmin.py
src/usuarios/migrations/: 0001_initial.py  0002_alter_usuario_favoritos_string.py
tests/: test_grape_kun_api.py
